Added new config options

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,5 @@ lightingAxe: "§9Lighting Axe"
 healingSword: "§6Healing Axe"
 idolsIncarnate: "§cIdols Incarnate"
 terminator: "§dTerminator"
+terminatorAbilityRange: 15
+healingSwordCooldown: 3
