Added new command and reworked some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,5 +2,6 @@ lightingAxe: "§9Lighting Axe"
 healingSword: "§6Healing Axe"
 idolsIncarnate: "§cIdols Incarnate"
 terminator: "§dTerminator"
+destructiveBow: "§cDestructive Bow"
 terminatorAbilityRange: 15
 healingSwordCooldown: 3
