--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,10 @@ lightingAxe: "§9Lighting Axe"
 healingSword: "§6Healing Axe"
 idolsIncarnate: "§cIdols Incarnate"
 terminator: "§dTerminator"
+frozenWand: "§bFrozen Wand"
+frozenWandRadius: 7
 terminatorAbilityRange: 15
-healingSwordCooldown: 3
+lightningAxeCooldown: 3
+frozenWandCooldown: 7
 WitherSpiderNametag: "§8Wither Spider"
 NecromancerNametag: "§9Necromancer"
