--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,3 +9,8 @@ lightningAxeCooldown: 3
 frozenWandCooldown: 7
 WitherSpiderNametag: "§8Wither Spider"
 NecromancerNametag: "§9Necromancer"
+InfectedZombieNametag: "§2Infected Zombie"
+WitherSpiderHealth: 40
+NecromancerHealth: 50
+InfectedZombieHealth: 30
+showCustomNametags: true
