--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,7 +11,7 @@ terminatorAbilityRange: 15
 lightningAxeCooldown: 3
 frozenWandCooldown: 7
 WitherSpiderNametag: "§8Wither Spider"
-NecromancerNametag: "§9Necromancer"
+NecromancerNametag: "§cMINI-BOSS §9Necromancer"
 InfectedZombieNametag: "§2Infected Zombie"
 WitherSpiderHealth: 40
 NecromancerHealth: 50
