--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <name>Mythicrpg</name>
 
+
     <description>Just a simple rpg plugin</description>
     <properties>
         <java.version>1.8</java.version>
@@ -67,9 +68,10 @@
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.18.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+
         </dependency>
     </dependencies>
 </project>
