--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,11 @@
-lightingAxe: "§9Lighting Axe"
-healingSword: "§6Healing Axe"
-idolsIncarnate: "§cIdols Incarnate"
-terminator: "§dTerminator"
-frozenWand: "§bFrozen Wand"
-impulseSword: "§eImpulse Sword"
-amberScythe: "§6Amber Scythe"
-milkPotionName: "§aMilk Potion"
+lightingAxe: "#4390ff!Lighting Axe"
+healingSword: "#ffdc8c!Healing Axe"
+idolsIncarnate: "#fe4448!Idols Incarnate"
+terminator: "#c545ff!Terminator"
+frozenWand: "#74dfff!Frozen Wand"
+impulseSword: "#d3d3d3!Impulse Sword"
+amberScythe: "#ffb959!Amber Scythe"
+milkPotionName: "#cfcfcf!Milk Potion"
 frozenWandRadius: 7
 impulseSwordRadius: 15
 impulseSwordCooldown: 5
@@ -13,6 +13,7 @@ terminatorAbilityRange: 15
 lightningAxeCooldown: 3
 frozenWandCooldown: 7
 amberScytheCooldown: 7
+giantSwordCooldown: 15
 WitherSpiderNametag: "#5f5f5f!Wither Spider"
 ParasiteNametag: "#1a590a!Parasite"
 InfectedZombieNametag: "#2cb70b!Infected Zombie"
