--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,8 +19,10 @@ WitherSpiderNametag: "#5f5f5f!Wither Spider"
 ParasiteNametag: "#1a590a!Parasite"
 InfectedZombieNametag: "#2cb70b!Infected Zombie"
 MasterAssassinNametag: "#5a3d6d!Master Assassin"
+AirSpiritNametag: "#dfdfdf!Air Spirit"
 MiniBossPrefix: "#ff535c!MINI BOSS "
 WitherSpiderHealth: 40
 ParasiteHealth: 50
 InfectedZombieHealth: 30
 MasterAssassinHealth: 25
+AirSpiritHealth: 30
