--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+
+# --- Item Names ---
+
 lightingAxe: "#4390ff!Lighting Axe"
 healingSword: "#ffdc8c!Healing Axe"
 idolsIncarnate: "#fe4448!Idols Incarnate"
@@ -7,6 +10,10 @@ impulseSword: "#d3d3d3!Impulse Sword"
 amberScythe: "#ffb959!Amber Scythe"
 milkPotion: "#cfcfcf!Milk Potion"
 giantSword: "#ffd4d4!Giant Sword"
+furiousAxe: "#53227d!Furious Axe"
+
+# --- Item Cooldown ---
+
 frozenWandRadius: 7
 impulseSwordRadius: 15
 impulseSwordCooldown: 5
@@ -15,6 +22,10 @@ lightningAxeCooldown: 3
 frozenWandCooldown: 7
 amberScytheCooldown: 7
 giantSwordCooldown: 15
+furiousAxeCooldown: 1
+
+# --- Mobs Nametags ---
+
 WitherSpiderNametag: "#5f5f5f!Wither Spider"
 ParasiteNametag: "#1a590a!Parasite"
 InfectedZombieNametag: "#2cb70b!Infected Zombie"
@@ -22,7 +33,12 @@ MasterAssassinNametag: "#5a3d6d!Master Assassin"
 AirSpiritNametag: "#dfdfdf!Ethereal Spirit"
 FireSpiritNametag: "#ff8e66!Flaming Spirit"
 IceSpiritNametag: "#74dfff!Frozen Spirit"
-MiniBossPrefix: "#ff535c!MINI BOSS "
+
+MiniBossPrefix: "#ff535c!MINI BOSS " # --- Miniboss prefix
+BossPrefix: "#7d2222!BOSS " # --- Boss prefix
+
+# --- Mobs HP ---
+
 WitherSpiderHealth: 40
 ParasiteHealth: 50
 InfectedZombieHealth: 30
