--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,7 @@ amberScythe: "#ffb959!Amber Scythe"
 milkPotion: "#cfcfcf!Milk Potion"
 giantSword: "#ffd4d4!Giant Sword"
 furiousAxe: "#53227d!Furious Axe"
+airBurner: "#ff8d00!Air Burner"
 
 # --- Item Cooldown ---
 
