--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,6 +42,7 @@ FireSpiritNametag: "#ff8e66!Flaming Spirit"
 IceSpiritNametag: "#74dfff!Frozen Spirit"
 SemiIdolNametag: "#0ab7ff!Semi Idol"
 AncientZombieNametag: "#5b5b5b!Ancient Zombie"
+OverworldInvaderNamtetag: "#ff7829!Overworld Invader"
 
 MiniBossPrefix: "#ff535c!MINI BOSS " # --- Miniboss prefix
 BossPrefix: "#7d2222!BOSS " # --- Boss prefix
@@ -56,7 +57,8 @@ AirSpiritHealth: 30
 FireSpiritHealth: 30
 IceSpiritHealth: 30
 SemiIdolHealth: 200
-AncientZombie: 30
+AncientZombieHealth: 30
+
 
 # --- Mob Drops ---
 
@@ -106,3 +108,11 @@ EnableAirBurnerRecipe: 1
 # --- Scrolls Names
 
 ArrowStormName: "#d47dff!Arrow Storm Scroll"
+
+# --- Bosses ---
+
+#--Witherus Netherlord
+NetherLordBossNametag: "#d60e00!Witherus Netherlord"
+NetherLordBossHealth: 500
+NetherHealerNametag: "#f56138!Infernal Totem of Eternal Healing"
+NetherHealerHealth: 20
