--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -118,6 +118,7 @@ EnableAirBurnerRecipe: 1
 ArrowStormName: "#d47dff!Arrow Storm Scroll"
 NetherStormScroll: "#460000!Nether Storm Scroll"
 HealingTotemScroll: "#ffff69!Healing Totem Scroll"
+InfernalAuraScroll: "#a11900!Infernal Aura Scroll"
 
 
 # --- Bosses ---
