Improved some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -88,6 +88,11 @@ WitheredShardName: "#443439!Withered Shard"
 NetherCatalystName: "#8a8a8a!Nether Catalyst"
 NetherEssenceName: "#e35f17!Nether Essence"
 CursedCrownName: "#d6a20d!Cursed Crown"
+CursedHeartName: "#630f0f!Cursed Heart"
+CursedBoneName: "#615959!Cursed Bone"
+DestructiveShard: "#ff0000!Destructive Shard"
+GhostEssence: "#a3b5b8!Ghost Essence"
+ShadyAura: "#aba3b8!Shady Aura"
 
 # --- Mob Drop Lore ---
 
