--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: alterstepix.mythicrpg.Mythicrpg
 api-version: 1.18
 prefix: mrpg
-authors: [ AlterStepix, Emeraldofcourse ]
+authors: [ AlterStepix, Crutogurch ]
 description: Just a simple rpg plugin
 commands:
   MythicItemsGui:
