Added final touches

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -127,6 +127,7 @@ EnableAmberScytheRecipe: 1
 EnableAirBurnerRecipe: 1
 EnableRunicSwordRecipe: 1
 FlamingWhipRecipe: 1
+MythicSwordOfLegendsRecipe: 1
 DarknessConcentratorRecipe: 1
 InfectedSwordRecipe: 1
 
