Added final touches (again)

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>alterstepix</groupId>
     <artifactId>mythicrpg</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-ALPHA</version>
     <packaging>jar</packaging>
 
     <name>Mythicrpg</name>
