Added new armor

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -195,3 +195,10 @@ MythicWarriorBootsName: "#f97aff!Mythic Warrior Boots"
 MythicWarriorLeggingsName: "#f97aff!Mythic Warrior Leggings"
 MythicWarriorChestplateName: "#f97aff!Mythic Warrior Chestplate"
 MythicWarriorHelmetName: "#f97aff!Mythic Warrior Helmet"
+
+#Thief Armorset
+
+ThiefBootsName: "#28272b!Thief's Boots"
+ThiefLeggingsName: "#28272b!Thief's Pants"
+ThiefChestplateName: "#28272b!Thief's Coat"
+ThiefHelmetName: "#28272b!Thief's Hood"
