Added new content

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,6 +18,8 @@ mythicSwordOfLegends: "#f97aff!Mythic Sword of Legends"
 flamingWhip: "#ed794c!Flaming Whip"
 darknessConcentrator: "#5e197d!Darkness Concentrator"
 infectedSword: "#114e19!Infected Sword"
+swordOfGrowth: "#009209!Sword Of Growth"
+singularity: "#44007e!Singularity"
 
 # --- Item Settings
 
