--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -59,6 +59,7 @@ PhantomRiderNametag: "#2b0089!Phantom Rider"
 FrozenSoulNametag: "#1283fc!Frozen Soul"
 DesertGuardianNametag: "#b3743d!Desert Guardian"
 RevenantArcherNametag: "#5e218f!Revenant Archer"
+MushroomMonsterNamatag: "#630606!Mushroom Monster"
 
 MiniBossPrefix: "#ff535c!MINI BOSS " # --- Miniboss prefix
 BossPrefix: "#7d2222!BOSS " # --- Boss prefix
@@ -80,7 +81,7 @@ PhantomRiderHealth: 30
 FrozenSoulHealth: 90
 DesertGuardianHealth: 30
 RevenantArcherHealth: 125
-
+MushroomMonsterHealth: 100
 
 # --- Mob Drops ---
 
