Reworked some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -148,6 +148,7 @@ ArrowStormName: "#d47dff!Arrow Storm Scroll"
 NetherStormScroll: "#460000!Nether Storm Scroll"
 HealingTotemScroll: "#ffff69!Healing Totem Scroll"
 InfernalAuraScroll: "#a11900!Infernal Aura Scroll"
+FrozenStormScroll: "#065363!Frozen Storm Scroll"
 
 
 # --- Bosses ---
