--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -156,6 +156,7 @@ NetherStormScroll: "#460000!Nether Storm Scroll"
 HealingTotemScroll: "#ffff69!Healing Totem Scroll"
 InfernalAuraScroll: "#a11900!Infernal Aura Scroll"
 FrozenStormScroll: "#065363!Frozen Storm Scroll"
+NecromancerScroll: "#b566d9!Necromancer Scroll"
 
 
 # --- Bosses ---
