--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,6 +21,8 @@ infectedSword: "#114e19!Infected Sword"
 swordOfGrowth: "#009209!Sword Of Growth"
 singularity: "#44007e!Singularity"
 corruptedMythicIdolIncarnate: "#4a008e!Corrupted Mythic Idol Incarnate"
+featherBow: "#bc94ff!Feather Bow"
+blazingFlare: "#ff1900!< !#fa4343!Blazing !#fa5043!Flare!#ff1900! >"
 
 # --- Item Settings
 
@@ -42,6 +44,7 @@ airBurnerCooldown: 7
 mythicSwordOfLegendsCooldown: 15
 flamingWhipCooldown: 1
 darknessConcentratorCooldown: 2
+blazingFlareCooldown: 3
 
 # --- Mobs Nametags ---
 
@@ -111,6 +114,7 @@ CursedBoneName: "#615959!Cursed Bone"
 DestructiveShard: "#ff0000!Destructive Shard"
 GhostEssence: "#a3b5b8!Ghost Essence"
 ShadyAura: "#aba3b8!Shady Aura"
+CyclopsAura: "#565656!Cyclops Bone"
 
 # --- Mob Drop Lore ---
 
