Reworked some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,6 +23,10 @@ singularity: "#44007e!Singularity"
 corruptedMythicIdolIncarnate: "#4a008e!Corrupted Mythic Idol Incarnate"
 featherBow: "#bc94ff!Feather Bow"
 blazingFlare: "#ff1900!< !#fa4343!Blazing !#fa5043!Flare!#ff1900! >"
+amethystSword: "#41177d!Amethyst!#4a2979! Sword"
+lightningHammer: "#3897f1!Lightning !#007aef!Hammer"
+inquisitor: "#00f0bf!Inquisitor"
+
 
 # --- Item Settings
 
@@ -45,6 +49,9 @@ mythicSwordOfLegendsCooldown: 15
 flamingWhipCooldown: 1
 darknessConcentratorCooldown: 2
 blazingFlareCooldown: 3
+amethystSwordCooldown: 5
+lightningHammerCooldown: 12
+inquisitorCooldown: 3
 
 # --- Mobs Nametags ---
 
