Reworked some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,6 +26,7 @@ blazingFlare: "#ff1900!< !#fa4343!Blazing !#fa5043!Flare!#ff1900! >"
 amethystSword: "#41177d!Amethyst!#4a2979! Sword"
 lightningHammer: "#3897f1!Lightning !#007aef!Hammer"
 inquisitor: "#00f0bf!Inquisitor"
+shadowKatana: "#694fcf!Shadow Katana"
 
 
 # --- Item Settings
