Reworked some code

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,7 @@ amethystSword: "#41177d!Amethyst!#4a2979! Sword"
 lightningHammer: "#3897f1!Lightning !#007aef!Hammer"
 inquisitor: "#00f0bf!Inquisitor"
 shadowKatana: "#694fcf!Shadow Katana"
+twilightBow: "#501fcf!Twilight Bow"
 
 
 # --- Item Settings
